# training-lucy

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  main.py  pyproject.toml  scoping.ipynb
PBS_files/: clip_test.bash  test_netowrk_architecture.bash  trial_run.bash  walking_netowrk_architecture.bash
animals/: ant.xml  lucy_v0.xml  lucy_v1.xml  lucy_v2.xml  lucy_v3.xml
animals/old_lucy/: lucy_v0.xml  lucy_v2.xml
notebooks.ipynb/: ant_scoping.ipynb  article_plots.ipynb  lucy_0_testing.ipynb  lucy_v1.ipynb  mojoco_test.ipynb
notebooks.ipynb/old_lucy/: lucy_0_testing.ipynb
src/: __init__.py  cluster_analysis_helper.py  cluster_gym.py  definitions.py  display_xml.py  helpers.py  lucy_classes_v0.py  lucy_classes_v1.py  render_model_gym.py  show_env.py
src/ant/: BipedalAntWrapper.py
src/cluster_scripts/: cluster_log_port.py  cluster_pbs.md  standing_clip_test.py  test_network_architecture.py  train_walking_0.py
src/lucy/: LucyEnv.py  LucyStandingWrapper.py  LucyWalkingWrapper.py  __init__.py
src/old_lucy/: lucy_classes_v0.py
